k8s/dvr/overlays/bazarr/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 6767
      protocol: TCP
      targetPort: http
