k8s/dvr/overlays/bazarr/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - bazarr.k8s.javydekoning.com
  rules:
    - host: bazarr.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr-service
                port:
                  name: http
